feat(config): implement deep merging of YAML configurations and enhance IP address retrieval